wp-content/themes/discussionwp/assets/css/fspstyles.css
/* ... */
@media only screen and (max-width: 448px) {
    .mkd-top-bar {
        font-size: 12px;
    }

    .mkd-top-bar .widget.widget_nav_menu ul li::after {
        padding-left: 5px;
    }
    .mkd-top-bar .widget.widget_nav_menu ul li {
        margin: 0 5px 0px 0 !important;
    }
    .mkd-mobile-header .mkd-mobile-header-inner .mkd-mobile-header-holder .mkd-position-right-inner > div{
        margin-right: 0px;
        margin-left: 5px;
    }
}
.mkd-mobile-search-nw {
    padding:15px;
    overflow: hidden;
}
.mkd-mobile-search-nw .mkd-column-left input{
    width:75%;
    float: left;
    padding: 0 2%;
    height: 36px;
}
.mkd-mobile-search-nw .mkd-column-right button{
    background: #b3cc36;
    border: 0 none;
    color: #ffffff;
    float: right;
    font-size: 20px;
    height: 38px;
    letter-spacing: 2px;
    width: 19%;
    cursor: pointer;
    font-weight: bold;
}
.mkd-mobile-header .mkd-mobile-nav ul{
    padding-bottom: 10px;
}
/*header css ends here*/

/*footer css starts here*/
footer .mkd-footer-top-holder {
    background-color: #4c4d4f;
}
.copyrights p{
    font-size: 12px;
}
.copyrights p a:hover{
    color: #f99d3e;
}  
/*footer css ends here*/
@media only screen and (max-width: 480px){
    .mkd-psi-title a{
        display: block;
        font-size: 17px;
        line-height: 24px;
    }
    .mkd-psi-holder .mkd-psi-slide .mkd-post-info-date, .mkd-psi-holder .mkd-psi-slide-thumb .mkd-post-info-date{
        margin-top: 0px;
    }
    .mkd-psi-holder .mkd-psi-slider .mkd-psi-content .mkd-pt-info-section{
        margin-top: 5px;
    } 
    .mkd-psi-holder .mkd-psi-slider .mkd-psi-content .mkd-pt-info-section > div > div.mkd-post-info-count::before {
        font-size: 21px;
    }
    .mkd-psi-holder .mkd-psi-slider .mkd-psi-content .mkd-pt-info-section > div > div .mkd-post-info-comments::before {
        font-size: 16px;
    }
    .mkd-psi-holder .mkd-psi-slider .mkd-psi-content .mkd-pt-info-section > div > div a, .mkd-psi-holder .mkd-psi-slider .mkd-psi-content .mkd-pt-info-section > div > div span{
        line-height: 27px;
    }
    .mkd-psi-holder .mkd-psi-slider .mkd-psi-content .mkd-pt-info-section > div > div {
        font-size: 11px;
        line-height: 28px;
    }
}
/*video menu styles start here*/
.mdk-videos-submenu .mkd-menu-second .mkd-menu-inner > ul, li.mkd-menu-narrow .mkd-menu-second .mkd-menu-inner ul {
    background: rgba(255,255,255,0.8)!important;
}
.mkd-drop-down .mkd-menu-wide .mkd-menu-second > .mkd-menu-inner > ul {
    padding: 20px 0px 20px;
}
.light-theme.wp-posts-carousel { overflow: inherit !important; }
.light-theme.wp-posts-carousel .wp-posts-carousel-container {
    border: 1px solid #b3cb35 !important;
    background: #ffffff !important;
    color: #3b7e39 !important;
    opacity: 1;
}
.light-theme.wp-posts-carousel .wp-posts-carousel-details{
    padding:0px !important;
}
.light-theme.wp-posts-carousel .wp-posts-carousel-container:hover {
    border-color: #3b7e3b!important;
    background:  #3b7e3b!important;
    color: #ffffff !important;
}
.light-theme.wp-posts-carousel .wp-posts-carousel-container:hover .wp-posts-carousel-details h3.wp-posts-carousel-title a{
    color: #ffffff !important;
}
.light-theme.wp-posts-carousel .wp-posts-carousel-container .wp-posts-carousel-details h3.wp-posts-carousel-title a{
    text-align: center;
    color:  #3b7e3b !important;
}
.light-theme.wp-posts-carousel .wp-posts-carousel-container .wp-posts-carousel-details h3.wp-posts-carousel-title a:hover {
    text-align: center;
    color: #ffffff !important;
}
.light-theme.wp-posts-carousel .wp-posts-carousel-title {
    text-align: center;
    font-size: 14px !important;
    min-height: 38px;
}
.light-theme.wp-posts-carousel .owl-controls .owl-nav div {
    background: #b3cc36 !important;
    border-radius: 0% !important;
    -webkit-border-radius: 0 !important;
    color: #ffffff !important;
    height: 100px !important;
    line-height: 100px !important;
}
.light-theme.wp-posts-carousel:hover .owl-controls .owl-nav .owl-prev:hover, .light-theme.wp-posts-carousel:hover .owl-controls .owl-nav .owl-next:hover {
    opacity: 1;
    color: #ffffff !important;
}
.light-theme.wp-posts-carousel:hover .owl-controls .owl-nav .owl-prev { 
    opacity: 1 !important;
}
.light-theme.wp-posts-carousel:hover .owl-controls .owl-nav .owl-next  { 
    opacity: 1 !important; 
}
.light-theme.wp-posts-carousel .owl-controls .owl-nav .owl-next { 
    right: -25px !important; 
    opacity: 1 !important;
    padding: 0px 18px 0px 12px !important;
}
.light-theme.wp-posts-carousel .owl-controls .owl-nav .owl-prev { 
    left: -25px !important; 
    opacity: 1 !important;
    padding: 0px 18px 0px 12px !important;
}
/*video menu styles ends here*/

.fsp-ads-homepage{
    text-align:center; 
}
.fsp-ads-homepage img{   
    margin: 10px auto 20px;
}

.fsp-inner-container{
    position: relative;
    background: #fff;
    padding: 32px 37px 42px;
    margin-bottom: 30px;
}
.fsp-padd-30px{
    padding:30px 0;
}
.mkd-psi-title{
    padding-top: 10px;
}
/*category page banner/slide image css starts here*/
#category_banner .slick-list.draggable{
    cursor:inherit;
}
#category_banner .mkd-psi-holder .mkd-psi-slider .mkd-psi-content{
    background: none;
}
#category_banner .mkd-psi-holder .mkd-psi-slider .mkd-psi-slide.slick-active .mkd-psi-content:hover{
    background: none;
}
#category_banner h2{
    padding: 10px 30px;
    float: left; 
    background-color: rgba(32, 32, 32, 0.25);
}
.category_pink{
    color:#c9739c;
}
.category_blue{
    color:#0e84ac;
}
.category_violet{
    color:#7e3b5a;
}
.category_green{
    color:#b3cc36;
}
.category_darkorange{
    color:#cb8132;
}
/*category page banner/slide image css ends here*/

/*Login css starts here*/
.login-container {
    background: #ffffff;
    padding: 20px 50px;
    text-align: center;
    max-width: 280px;
    margin: 40px auto;
    position: relative;
}
.login-container p{
    margin: 10px 0 20px;
}
/* ... */

